// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AttachmentFile > SHOULD match snapshot with all props 1`] = `
<div>
  <div
    class="css-187x5qv"
    data-testid="AttachmentFile"
  >
    <svg
      class="css-1u8qly9"
      data-testid="Icon-fileCopy"
      fill="#474747"
      height="32"
      viewBox="0 0 24 24"
      width="32"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M16 1H2V17H4V3H16V1ZM15 5L21 11V23H6V5H15ZM14 12H19.5L14 6.5V12Z"
        fill="currentColor"
      />
    </svg>
    <div
      class="css-4s8dzb"
    >
      <div
        class="css-1u8qly9"
        data-testid="Tooltip-wrapper"
      >
        <div
          class="css-oqkox1"
          data-testid="AttachmentFile-name"
        >
          report.pdf
        </div>
      </div>
      <div
        class="css-ct9q29"
        data-testid="AttachmentFile-meta"
      >
        <span
          class="css-7401vy"
        >
          PDF
        </span>
        <span
          class="css-7401vy"
        >
          ·
        </span>
        <span
          class="css-7401vy"
        >
          1.2 MB
        </span>
      </div>
    </div>
    <button
      aria-label="Remove file"
      class="css-1jtlk8k"
      data-testid="AttachmentFile-remove"
      role="button"
      tabindex="0"
      type="button"
    >
      <span
        class="css-0"
        data-testid="Button-icon-start"
      >
        <svg
          class="css-1u8qly9"
          data-testid="Icon-cross"
          fill="none"
          height="18"
          viewBox="0 0 24 24"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19 6.41L17.59 5L12 10.59L6.41 5L5 6.41L10.59 12L5 17.59L6.41 19L12 13.41L17.59 19L19 17.59L13.41 12L19 6.41Z"
            fill="currentColor"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`AttachmentFile > SHOULD match snapshot without meta 1`] = `
<div>
  <div
    class="css-187x5qv"
    data-testid="AttachmentFile"
  >
    <svg
      class="css-1u8qly9"
      data-testid="Icon-fileCopy"
      fill="#474747"
      height="32"
      viewBox="0 0 24 24"
      width="32"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M16 1H2V17H4V3H16V1ZM15 5L21 11V23H6V5H15ZM14 12H19.5L14 6.5V12Z"
        fill="currentColor"
      />
    </svg>
    <div
      class="css-4s8dzb"
    >
      <div
        class="css-1u8qly9"
        data-testid="Tooltip-wrapper"
      >
        <div
          class="css-oqkox1"
          data-testid="AttachmentFile-name"
        >
          report.pdf
        </div>
      </div>
    </div>
    <button
      aria-label="Remove file"
      class="css-1jtlk8k"
      data-testid="AttachmentFile-remove"
      role="button"
      tabindex="0"
      type="button"
    >
      <span
        class="css-0"
        data-testid="Button-icon-start"
      >
        <svg
          class="css-1u8qly9"
          data-testid="Icon-cross"
          fill="none"
          height="18"
          viewBox="0 0 24 24"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19 6.41L17.59 5L12 10.59L6.41 5L5 6.41L10.59 12L5 17.59L6.41 19L12 13.41L17.59 19L19 17.59L13.41 12L19 6.41Z"
            fill="currentColor"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`AttachmentFile > SHOULD match snapshot without remove button 1`] = `
<div>
  <div
    class="css-187x5qv"
    data-testid="AttachmentFile"
  >
    <svg
      class="css-1u8qly9"
      data-testid="Icon-fileCopy"
      fill="#474747"
      height="32"
      viewBox="0 0 24 24"
      width="32"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M16 1H2V17H4V3H16V1ZM15 5L21 11V23H6V5H15ZM14 12H19.5L14 6.5V12Z"
        fill="currentColor"
      />
    </svg>
    <div
      class="css-4s8dzb"
    >
      <div
        class="css-1u8qly9"
        data-testid="Tooltip-wrapper"
      >
        <div
          class="css-oqkox1"
          data-testid="AttachmentFile-name"
        >
          report.pdf
        </div>
      </div>
      <div
        class="css-ct9q29"
        data-testid="AttachmentFile-meta"
      >
        <span
          class="css-7401vy"
        >
          PDF
        </span>
        <span
          class="css-7401vy"
        >
          ·
        </span>
        <span
          class="css-7401vy"
        >
          1.2 MB
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`AttachmentFile > isLoading > SHOULD match snapshot when isLoading 1`] = `
<div>
  <div
    class="css-187x5qv"
    data-testid="AttachmentFile"
  >
    <svg
      class="css-1u8qly9"
      data-testid="Icon-fileCopy"
      fill="#474747"
      height="32"
      viewBox="0 0 24 24"
      width="32"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M16 1H2V17H4V3H16V1ZM15 5L21 11V23H6V5H15ZM14 12H19.5L14 6.5V12Z"
        fill="currentColor"
      />
    </svg>
    <div
      class="css-4s8dzb"
    >
      <div
        class="css-1u8qly9"
        data-testid="Tooltip-wrapper"
      >
        <div
          class="css-oqkox1"
          data-testid="AttachmentFile-name"
        >
          report.pdf
        </div>
      </div>
      <div
        class="css-ct9q29"
        data-testid="AttachmentFile-meta"
      >
        <span
          class="css-7401vy"
        >
          PDF
        </span>
        <span
          class="css-7401vy"
        >
          ·
        </span>
        <span
          class="css-7401vy"
        >
          1.2 MB
        </span>
      </div>
    </div>
    <button
      aria-busy="true"
      aria-label="Remove file"
      class="css-1jtlk8k"
      data-testid="AttachmentFile-remove"
      disabled=""
      role="button"
      tabindex="0"
      type="button"
    >
      <span
        class="css-7rcsk"
        data-testid="Loader"
      />
    </button>
  </div>
</div>
`;
